k8s/authentication-service-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentication-service-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      component: uaa
  template:
    metadata:
      labels:
        component: uaa
    spec:
      containers:
        - name: authentication-service
          image: noxior/authentication-service
          ports:
            - containerPort: 3000
