k8s/authentication-service-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: authentication-service-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: uaa
  ports:
    - port: 3000
      targetPort: 3000
