k8s/ingress-service.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
    - hosts:
        - hexolink.xyz
        - www.hexolink.xyz
      secretName: hexolink-xyz
  rules:
    - host: hexolink.xyz
      http:
        paths:
          - path: /uaa/?(.*)
            pathType: Prefix
            backend:
              service:
                name: authentication-service-cluster-ip-service
                port:
                  number: 3000
    - host: www.hexolink.xyz
      http:
        paths:
          - path: /uaa/?(.*)
            pathType: Prefix
            backend:
              service:
                name: authentication-service-cluster-ip-service
                port:
                  number: 3000
